Fri Apr 16 13:02:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
        * ace/Atomic_Op.cpp:
        * ace/config-sunos5.10.h:
	  Added support for the Solaris 10 Atomic support, thanks
	  to Aleksandar Vukajlovic <aleksandar dot vukajlovic at finsoft dot rs>
	  for providing the patches

Wed Apr 14 11:22:27 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Fixed compile error on some g++ versions.

Tue Apr 13 20:34:40 UTC 2010  Steve Huston  <shuston@riverace.com>

        * bin/PerlACE/Process_Unix.pm: Fix typo that broke all tests.

Tue Apr 13 19:34:40 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.{h cpp}: Reorder the enqueue/pipe operations
          when adding a notification to close the race where notifies can get
          lost in the ACE_HAS_NOTIFICATION_QUEUE case. Also fixed a misplaced
          #endif in read_notification_pipe() and cleaned it up some.

Mon Apr 12 09:31:54 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/ProcessLVRT.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/TestTarget_LVRT.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/Process_VMS.pm:

          Added support for running multiplatform tests using remote shell
          connections.
          Currently only supported for *nix-like platforms
          (like Linux PPC64 <-> Linux x86_64).

Thu Apr  8 21:25:54 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/OS_NS_netdb.cpp:

          Fixed compile time error encountered in MAC and iPhone platforms.
